documentacion/obtenida/ARINC 429/driver and software/LX-AFDX-1/API/AX1W32.H

typedef void VOID;
typedef int INT;
typedef unsigned char BYTE;
typedef unsigned char * LPBYTE;
typedef unsigned short USHORT;
typedef unsigned long ULONG;
typedef long LONG;
typedef float FLOAT;
typedef double DOUBLE;
typedef unsigned __int64 ULONGLONG;
typedef __int64 LONGLONG;
typedef unsigned long HVL;
typedef unsigned long HPORT;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef HCARD * LPHCARD;
typedef int ERRVAL;
typedef struct 
{
    USHORT offset;
    USHORT ds1_len;
    USHORT ds2_len;
    USHORT ds3_len;
    USHORT ds4_len;
} FDSDESC;
    typedef struct
    {
        BYTE data[6];
    } ADDRESS;
typedef ADDRESS * LPADDRESS;

/**
*
*  AX1 Driver functions.
*
**/

AX1W32API ERRVAL __stdcall AX1_CardClose(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_CardOpen(LPHCARD lpHandle,INT cardnum);

AX1W32API ERRVAL __stdcall AX1_CardReset(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_CardStart(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_CardStop(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_ErrCtrlConfig(ULONG configval,USHORT trigid,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_ErrNetEnable(ULONG configval,USHORT trigid,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_ErrPktConfig(ULONG configval,ULONG blendflags,USHORT trigid,LPBYTE packet,USHORT pktlen,USHORT errpadlen,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_ErrRSNConfig(ULONG configval,USHORT trigid,INT modifier,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_ErrXmtConfig(ULONG configval,USHORT trigid,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_EventConfig(ULONG configval,HCARD handleval);

AX1W32API ULONG __stdcall AX1_FDSGetBoolean(LPBYTE buf,LPBYTE status,FDSDESC fds_desc,INT ds_num,INT offset,BOOL byteswap);

AX1W32API FLOAT __stdcall AX1_FDSGetFloat32(LPBYTE buf,LPBYTE status,FDSDESC fds_desc,INT ds_num,INT offset,BOOL byteswap);

AX1W32API DOUBLE __stdcall AX1_FDSGetFloat64(LPBYTE buf,LPBYTE status,FDSDESC fds_desc,INT ds_num,INT offset,BOOL byteswap);

AX1W32API USHORT __stdcall AX1_FDSGetOpaqueFix(LPBYTE buf,LPBYTE status,FDSDESC fds_desc,INT ds_num,INT offset,LPBYTE outbuf,INT bufsize);

AX1W32API USHORT __stdcall AX1_FDSGetOpaqueVar(LPBYTE buf,LPBYTE status,FDSDESC fds_desc,INT ds_num,INT offset,LPBYTE outbuf,INT bufsize);

AX1W32API LONG __stdcall AX1_FDSGetSigned32(LPBYTE buf,LPBYTE status,FDSDESC fds_desc,INT ds_num,INT offset,BOOL byteswap);

AX1W32API LONGLONG __stdcall AX1_FDSGetSigned64(LPBYTE buf,LPBYTE status,FDSDESC fds_desc,INT ds_num,INT offset,BOOL byteswap);

AX1W32API BYTE __stdcall AX1_FDSGetStatus(LPBYTE buf,FDSDESC fds_desc,INT ds_num);

AX1W32API USHORT __stdcall AX1_FDSGetString(LPBYTE buf,LPBYTE status,FDSDESC fds_desc,INT ds_num,INT offset,LPSTR outbuf,INT bufsize);

AX1W32API BYTE __stdcall AX1_FDSPutBoolean(ULONG putval,LPBYTE buf,BYTE status,FDSDESC fds_desc,INT ds_num,INT offset,BOOL byteswap);

AX1W32API BYTE __stdcall AX1_FDSPutFloat32(FLOAT putval,LPBYTE buf,BYTE status,FDSDESC fds_desc,INT ds_num,INT offset,BOOL byteswap);

AX1W32API BYTE __stdcall AX1_FDSPutFloat64(DOUBLE putval,LPBYTE buf,BYTE status,FDSDESC fds_desc,INT ds_num,INT offset,BOOL byteswap);

AX1W32API BYTE __stdcall AX1_FDSPutOpaqueFix(LPBYTE buf,BYTE status,FDSDESC fds_desc,INT ds_num,INT offset,LPBYTE inbuf,INT bufsize);

AX1W32API BYTE __stdcall AX1_FDSPutOpaqueVar(LPBYTE buf,BYTE status,FDSDESC fds_desc,INT ds_num,INT offset,LPBYTE inbuf,USHORT datalen,INT bufsize);

AX1W32API BYTE __stdcall AX1_FDSPutSigned32(LONG putval,LPBYTE buf,BYTE status,FDSDESC fds_desc,INT ds_num,INT offset,BOOL byteswap);

AX1W32API BYTE __stdcall AX1_FDSPutSigned64(LONGLONG putval,LPBYTE buf,BYTE status,FDSDESC fds_desc,INT ds_num,INT offset,BOOL byteswap);

AX1W32API VOID __stdcall AX1_FDSPutStatus(LPBYTE buf,FDSDESC fds_desc,INT ds_num,BYTE status);

AX1W32API BYTE __stdcall AX1_FDSPutString(LPBYTE buf,BYTE status,FDSDESC fds_desc,INT ds_num,INT offset,LPSTR inbuf,INT bufsize);

AX1W32API ULONG __stdcall AX1_FldGetBoolean(LPBYTE buf,INT offset,BOOL byteswap);

AX1W32API FLOAT __stdcall AX1_FldGetFloat32(LPBYTE buf,INT offset,BOOL byteswap);

AX1W32API DOUBLE __stdcall AX1_FldGetFloat64(LPBYTE buf,INT offset,BOOL byteswap);

AX1W32API USHORT __stdcall AX1_FldGetOpaqueFix(LPBYTE buf,INT offset,LPBYTE outbuf,INT bufsize);

AX1W32API USHORT __stdcall AX1_FldGetOpaqueVar(LPBYTE buf,INT offset,LPBYTE outbuf,INT bufsize);

AX1W32API LONG __stdcall AX1_FldGetSigned32(LPBYTE buf,INT offset,BOOL byteswap);

AX1W32API LONGLONG __stdcall AX1_FldGetSigned64(LPBYTE buf,INT offset,BOOL byteswap);

AX1W32API USHORT __stdcall AX1_FldGetString(LPBYTE buf,INT offset,LPSTR outbuf,INT bufsize);

AX1W32API VOID __stdcall AX1_FldPutBoolean(ULONG putval,LPBYTE buf,INT offset,BOOL byteswap);

AX1W32API VOID __stdcall AX1_FldPutFloat32(FLOAT putval,LPBYTE buf,INT offset,BOOL byteswap);

AX1W32API VOID __stdcall AX1_FldPutFloat64(DOUBLE putval,LPBYTE buf,INT offset,BOOL byteswap);

AX1W32API VOID __stdcall AX1_FldPutOpaqueFix(LPBYTE buf,INT offset,LPBYTE inbuf,INT bufsize);

AX1W32API VOID __stdcall AX1_FldPutOpaqueVar(LPBYTE buf,INT offset,LPBYTE inbuf,USHORT datalen,INT bufsize);

AX1W32API VOID __stdcall AX1_FldPutSigned32(LONG putval,LPBYTE buf,INT offset,BOOL byteswap);

AX1W32API VOID __stdcall AX1_FldPutSigned64(LONGLONG putval,LPBYTE buf,INT offset,BOOL byteswap);

AX1W32API VOID __stdcall AX1_FldPutString(LPBYTE buf,INT offset,LPSTR inbuf,INT bufsize);

AX1W32API USHORT __stdcall AX1_Hton16(USHORT val);

AX1W32API ULONG __stdcall AX1_Hton32(ULONG val);

AX1W32API ULONGLONG __stdcall AX1_Hton64(ULONGLONG val);

AX1W32API ULONG __stdcall AX1_MakeDstIP(USHORT vlid);

AX1W32API ULONG __stdcall AX1_MakeDstIPUnicast(USHORT domain,USHORT side,USHORT location,USHORT part);

AX1W32API ERRVAL __stdcall AX1_MakeDstMAC(USHORT vlid,LPADDRESS paddress);

AX1W32API ERRVAL __stdcall AX1_MakeDstMACEx(USHORT vlid,ULONG MACConst,LPADDRESS paddress);

AX1W32API ULONG __stdcall AX1_MakeSrcIP(USHORT domain,USHORT side,USHORT location,USHORT part);

AX1W32API ULONG __stdcall AX1_MakeSrcIPEx(USHORT userid,USHORT part);

AX1W32API ERRVAL __stdcall AX1_MakeSrcMAC(USHORT domain,USHORT side,USHORT location,USHORT intid,LPADDRESS paddress);

AX1W32API ERRVAL __stdcall AX1_MakeSrcMACEx(USHORT userid,USHORT intid,LPADDRESS paddress);

AX1W32API ERRVAL __stdcall AX1_MIBGetNetInfo(USHORT mibtype,LPBYTE data,USHORT busnum,HCARD handleval);